--- a/pom.xml
+++ b/pom.xml
@@ -20,33 +20,23 @@ limitations under the License.
     <!-- REQUIRED : your application must be packed as a .war to deploy on App Engine Standard -->
     <packaging>war</packaging>
 
-    <groupId>java8</groupId>
-    <artifactId>newyearquest</artifactId>
+    <groupId>com.example.appengine-j8</groupId>
+    <artifactId>helloworld</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--    <parent>-->
-    <!--        <groupId>com.google.cloud.samples</groupId>-->
-    <!--        <artifactId>shared-configuration</artifactId>-->
-    <!--        <version>1.0.21</version>-->
-    <!--    </parent>-->
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.google.cloud.samples</groupId>
+        <artifactId>shared-configuration</artifactId>
+        <version>1.0.21</version>
     </parent>
 
-<!--    <properties>-->
-<!--        <maven.compiler.source>1.8</maven.compiler.source>-->
-<!--        <maven.compiler.target>1.8</maven.compiler.target>-->
-<!--        &lt;!&ndash; REQUIRED by appengine-maven-plugin plugin, if web.xml does not exist for your application &ndash;&gt;-->
-<!--        <failOnMissingWebXml>false</failOnMissingWebXml>-->
-<!--    </properties>-->
     <properties>
-        <java.version>11</java.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <lombok.version>1.18.12</lombok.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- REQUIRED by appengine-maven-plugin plugin, if web.xml does not exist for your application -->
+        <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
+
     <dependencies>
         <!-- Compile/runtime dependencies -->
         <!-- App Engine SDK dependency : only required if you need to explicitly use App Engine API -->
@@ -56,38 +46,11 @@ limitations under the License.
             <version>1.9.84</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <!-- Test Dependencies -->
         <dependency>
@@ -127,50 +90,19 @@ limitations under the License.
             <version>3.6.28</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
+        <!-- for hot reload of the web application-->
+        <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>1.3.1.Final</version>
-                        </path>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                        <path>
-                            <groupId>org.hibernate</groupId>
-                            <artifactId>hibernate-jpamodelgen</artifactId>
-                            <version>${hibernate.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>2.4.0</version>
                 <configuration>
                     <!-- can be set w/ -DprojectId=myProjectId on command line -->
-                    <projectId>newyear-300219</projectId>
+                    <projectId>myProjectId</projectId>
                     <!-- set the GAE version or use "GCLOUD_CONFIG" for an autogenerated GAE version -->
                     <version>GCLOUD_CONFIG</version>
                 </configuration>
@@ -178,5 +110,186 @@ limitations under the License.
         </plugins>
     </build>
 </project>
+
+        <!--<?xml version="1.0" encoding="UTF-8"?>-->
+<!--&lt;!&ndash;-->
+<!--Copyright 2017 Google Inc.-->
+
+<!--Licensed under the Apache License, Version 2.0 (the "License");-->
+<!--you may not use this file except in compliance with the License.-->
+<!--You may obtain a copy of the License at-->
+
+<!--    http://www.apache.org/licenses/LICENSE-2.0-->
+
+<!--Unless required by applicable law or agreed to in writing, software-->
+<!--distributed under the License is distributed on an "AS IS" BASIS,-->
+<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
+<!--See the License for the specific language governing permissions and-->
+<!--limitations under the License.-->
+<!--&ndash;&gt;-->
+<!--<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
+
+<!--    <modelVersion>4.0.0</modelVersion>-->
+<!--    &lt;!&ndash; REQUIRED : your application must be packed as a .war to deploy on App Engine Standard &ndash;&gt;-->
+<!--    <packaging>war</packaging>-->
+
+<!--    <groupId>java8</groupId>-->
+<!--    <artifactId>newyearquest</artifactId>-->
+<!--    <version>1.0-SNAPSHOT</version>-->
+
+<!--    &lt;!&ndash;    <parent>&ndash;&gt;-->
+<!--    &lt;!&ndash;        <groupId>com.google.cloud.samples</groupId>&ndash;&gt;-->
+<!--    &lt;!&ndash;        <artifactId>shared-configuration</artifactId>&ndash;&gt;-->
+<!--    &lt;!&ndash;        <version>1.0.21</version>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </parent>&ndash;&gt;-->
+<!--    <parent>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
+<!--        <version>2.2.2.RELEASE</version>-->
+<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+<!--    </parent>-->
+
+<!--&lt;!&ndash;    <properties>&ndash;&gt;-->
+<!--&lt;!&ndash;        <maven.compiler.source>1.8</maven.compiler.source>&ndash;&gt;-->
+<!--&lt;!&ndash;        <maven.compiler.target>1.8</maven.compiler.target>&ndash;&gt;-->
+<!--&lt;!&ndash;        &lt;!&ndash; REQUIRED by appengine-maven-plugin plugin, if web.xml does not exist for your application &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;        <failOnMissingWebXml>false</failOnMissingWebXml>&ndash;&gt;-->
+<!--&lt;!&ndash;    </properties>&ndash;&gt;-->
+<!--    <properties>-->
+<!--        <java.version>11</java.version>-->
+<!--        <mapstruct.version>1.3.1.Final</mapstruct.version>-->
+<!--        <lombok.version>1.18.12</lombok.version>-->
+<!--    </properties>-->
+<!--    <dependencies>-->
+<!--        &lt;!&ndash; Compile/runtime dependencies &ndash;&gt;-->
+<!--        &lt;!&ndash; App Engine SDK dependency : only required if you need to explicitly use App Engine API &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.google.appengine</groupId>-->
+<!--            <artifactId>appengine-api-1.0-sdk</artifactId>-->
+<!--            <version>1.9.84</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.h2database</groupId>-->
+<!--            <artifactId>h2</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-devtools</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-test</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.junit.vintage</groupId>-->
+<!--                    <artifactId>junit-vintage-engine</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; Test Dependencies &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.google.appengine</groupId>-->
+<!--            <artifactId>appengine-testing</artifactId>-->
+<!--            <version>1.9.84</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.google.appengine</groupId>-->
+<!--            <artifactId>appengine-api-stubs</artifactId>-->
+<!--            <version>1.9.84</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.google.appengine</groupId>-->
+<!--            <artifactId>appengine-tools-sdk</artifactId>-->
+<!--            <version>1.9.84</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>com.google.truth</groupId>-->
+<!--            <artifactId>truth</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>junit</groupId>-->
+<!--            <artifactId>junit</artifactId>-->
+<!--            <version>4.13.1</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mockito</groupId>-->
+<!--            <artifactId>mockito-core</artifactId>-->
+<!--            <version>3.6.28</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.projectlombok</groupId>-->
+<!--            <artifactId>lombok</artifactId>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
+
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <source>${java.version}</source>-->
+<!--                    <target>${java.version}</target>-->
+<!--                    <annotationProcessorPaths>-->
+<!--                        <path>-->
+<!--                            <groupId>org.mapstruct</groupId>-->
+<!--                            <artifactId>mapstruct-processor</artifactId>-->
+<!--                            <version>1.3.1.Final</version>-->
+<!--                        </path>-->
+<!--                        <path>-->
+<!--                            <groupId>org.projectlombok</groupId>-->
+<!--                            <artifactId>lombok</artifactId>-->
+<!--                            <version>${lombok.version}</version>-->
+<!--                        </path>-->
+<!--                        <path>-->
+<!--                            <groupId>org.hibernate</groupId>-->
+<!--                            <artifactId>hibernate-jpamodelgen</artifactId>-->
+<!--                            <version>${hibernate.version}</version>-->
+<!--                        </path>-->
+<!--                    </annotationProcessorPaths>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>com.google.cloud.tools</groupId>-->
+<!--                <artifactId>appengine-maven-plugin</artifactId>-->
+<!--                <version>2.4.0</version>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; can be set w/ -DprojectId=myProjectId on command line &ndash;&gt;-->
+<!--                    <projectId>newyear-300219</projectId>-->
+<!--                    &lt;!&ndash; set the GAE version or use "GCLOUD_CONFIG" for an autogenerated GAE version &ndash;&gt;-->
+<!--                    <version>GCLOUD_CONFIG</version>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
+<!--</project>-->
 
 
