--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-        <?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Copyright 2017 Google Inc.
 
@@ -20,21 +20,15 @@ limitations under the License.
     <!-- REQUIRED : your application must be packed as a .war to deploy on App Engine Standard -->
     <packaging>war</packaging>
 
-    <groupId>com.example.appengine.java8</groupId>
-    <artifactId>newyearquest</artifactId>
+    <groupId>com.example.appengine-j8</groupId>
+    <artifactId>helloworld</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--    <parent>-->
-    <!--        <groupId>com.google.cloud.samples</groupId>-->
-    <!--        <artifactId>shared-configuration</artifactId>-->
-    <!--        <version>1.0.21</version>-->
-    <!--    </parent>-->
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+<!--    <parent>-->
+<!--        <groupId>com.google.cloud.samples</groupId>-->
+<!--        <artifactId>shared-configuration</artifactId>-->
+<!--        <version>1.0.21</version>-->
+<!--    </parent>-->
 
 <!--    <properties>-->
 <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
@@ -42,24 +36,19 @@ limitations under the License.
 <!--        &lt;!&ndash; REQUIRED by appengine-maven-plugin plugin, if web.xml does not exist for your application &ndash;&gt;-->
 <!--        <failOnMissingWebXml>false</failOnMissingWebXml>-->
 <!--    </properties>-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <properties>
         <java.version>11</java.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <lombok.version>1.18.12</lombok.version>
     </properties>
     <dependencies>
-        <!-- Compile/runtime dependencies -->
-        <!-- App Engine SDK dependency : only required if you need to explicitly use App Engine API -->
-        <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-api-1.0-sdk</artifactId>
-            <version>1.9.84</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -67,6 +56,10 @@ limitations under the License.
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -78,16 +71,19 @@ limitations under the License.
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <!-- Compile/runtime dependencies -->
+        <!-- App Engine SDK dependency : only required if you need to explicitly use App Engine API -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>1.9.84</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <!-- Test Dependencies -->
         <dependency>
@@ -127,13 +123,11 @@ limitations under the License.
             <version>3.6.28</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
+        <!-- for hot reload of the web application-->
+        <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -145,6 +139,23 @@ limitations under the License.
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.3.1.Final</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>${hibernate.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
@@ -161,5 +172,3 @@ limitations under the License.
         </plugins>
     </build>
 </project>
-
-
